user auth refactor